integration green again, should have better concrete MR type